apps/home/forge/git-pages/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-pages
  namespace: forge
spec:
  template:
    spec:
      containers:
        - name: git-pages
          command: ["git-pages", "-config", "/etc/git-pages/config.toml"]
          ports:
            - name: metrics # [server] metrics in config.toml
              containerPort: 3002
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/git-pages
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: git-pages-data
        - name: config
          configMap:
            name: git-pages-config
