apps/home/forge/git-pages/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-pages
  namespace: forge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "*.pages.forge.superkooka.com"
      secretName: git-pages-tls
  rules:
    - host: "*.pages.forge.superkooka.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git-pages
                port:
                  number: 3000
